--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrforevents-mvp-skeleton",
+  "name": "qrforevents-mvp-fixed",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -10,7 +10,6 @@
   "dependencies": {
     "next": "14.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "qrcode.react": "^3.1.0"
+    "react-dom": "18.2.0"
   }
 }
