--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "qrforevents-mvp-qrgen",
+  "name": "qrforevents-mvp",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -11,6 +11,6 @@
     "next": "14.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "qrcode.react": "^3.1.0"
+    "qrcode.react": "3.1.0"
   }
 }
